# RpmCounter

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  SPARK_EXPORT_CONTRACT.md  platformio.ini  run_simulator.cmd
boards/: esp32s3.json
include/: ambient_light_algo.h  esp32-hal-periman.h  lv_conf.h  signal_utils.h
include/esp_private/: periph_ctrl.h
lib/waveshare_demo/: README.md
scripts/: littlefs_datadir.py  littlefs_setup.py
simulator/: main.cpp  rpm_simulator.cpp  rpm_simulator.h  run_simulator.cmd  run_simulator.ps1  sdl_lvgl_window.cpp  sdl_lvgl_window.h  simulator_app.cpp  simulator_app.h  simulator_settings_store.cpp  simulator_settings_store.h  simulator_types.h  simulator_web_server.cpp  simulator_web_server.h  virtual_led_bar.cpp  virtual_led_bar.h
simulator/tests/: simulator_app_tests.cpp
src/: ble_obd.cpp  ble_obd.h  config.cpp  config.h  display.cpp  display.h  display_s3.cpp  display_s3.h  led_bar.cpp  led_bar.h  logo_anim.cpp  logo_anim.h  main.cpp  scan.txt  state.cpp  state.h  touch_s3.cpp  touch_s3.h  ui_main.cpp  ui_main.h  utils.cpp  utils.h  vehicle_info.cpp  vehicle_info.h  web_ui.cpp
src/bluetooth/: ble_obd.cpp  ble_obd.h
src/core/: config.cpp  config.h  logging.cpp  logging.h  shiftlight_profile.cpp  state.cpp  state.h  utils.cpp  utils.h  vehicle_info.cpp  vehicle_info.h  wifi.cpp  wifi.h
src/hardware/: ambient_light.cpp  ambient_light.h  ambient_light_algo.cpp  display.cpp  display.h  display_s3.cpp  display_s3.h  esp_lcd_sh8601.cpp  esp_lcd_sh8601.h  gesture_sensor.cpp  gesture_sensor.h  led_bar.cpp  led_bar.h  logo_anim.cpp  logo_anim.h
src/platform/esp32/: ui_runtime_esp32.cpp  ui_runtime_esp32.h
src/telemetry/: auto_shift_profile.cpp  auto_shift_profile.h  side_leds.cpp  side_leds.h  simhub_client.cpp  simhub_client.h  telemetry_manager.cpp  telemetry_manager.h  usb_sim_bridge.cpp  usb_sim_bridge.h
src/ui/: ui_main.cpp  ui_main.h  ui_manager.cpp  ui_manager.h  ui_runtime.h  ui_s3_main.cpp  ui_s3_main.h  ui_session_data.h
src/web/: web_helpers.cpp  web_helpers.h  web_ui.cpp  web_ui.h  web_ui_pages.cpp  web_ui_pages.h
telemetry/: json_extract.h  simhub_http_listener.cpp  simhub_http_listener.h  simhub_udp_listener.cpp  simhub_udp_listener.h  telemetry_service.cpp  telemetry_service.h  telemetry_types.h
test/: test_main.cpp
test/unit_core/: test_ambient_light_algo.cpp  test_clamp_int.cpp  test_gesture_sensor.cpp  test_signal_utils.cpp  test_state_retry.cpp  test_telemetry_manager.cpp
tools/: install_usb_bridge_startup.ps1  run_usb_sim_bridge.ps1  usb_sim_bridge.py  usb_sim_bridge_index.html
webserver/: index.html  settings.html
webserver/assets/: main.js  settings.js  style.css
